--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 .idea/**/sqlDataSources.xml
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
-
+target/
 # Gradle:
 .idea/**/gradle.xml
 .idea/**/libraries
